[website] Fix WIP banner on mobile

--- a/packages/website/src/static/docs.css
+++ b/packages/website/src/static/docs.css
@@ -32,7 +32,9 @@ main a {
 }
 
 .wip {
-  display: flex;
+  grid-template-columns: 24px auto;
+  column-gap: 8px;
+  display: grid;
   align-items: center;
   background: #4d4c51;
   padding: 20px;
@@ -42,12 +44,29 @@ main a {
 }
 
 .wip::before {
+  flex: 0 0 auto;
+  grid-row: 1/3;
   content: "";
   width: 24px;
   height: 24px;
   margin-right: 8px;
   background: no-repeat center/cover
     url(/breadboard/static/third_party/icons/warning.svg);
+}
+
+.wip > strong {
+  flex: 1 0 auto;
+  display: block;
+}
+
+.wip > * {
+  white-space: nowrap;
+}
+
+@media (min-width: 500px) {
+  .wip {
+    grid-template-columns: 24px min-content auto;
+  }
 }
 
 h1,
